# factorio-balancer-calculator

./: CMakeLists.txt  README.md  main.cpp
src/: Belt.cpp  Belt.h  Item.cpp  Item.h  Scheme.cpp  Scheme.h  Splitter.cpp  Splitter.h
